tests/_sh/checks/initializer_nested.golden
tests/_sh/checks/initializer_nested.c:2:14: Syntax error: nested initializer lists not supported
