tests/_sh/checks/initializer_nested.c
// expect_comp_failure
int arr[] = { {1, 2, 3}, {4, 5, 6} };

void main() {
  return;
}
